libs/braillify/tests/snapshots/coverage_extra__pi_pair_1_10.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "∏(1,10)"
unicode = err: Invalid character
bytes   = err: Invalid character
