libs/braillify/tests/snapshots/coverage_extra__pi_pair_2_5.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "∏(2,5)"
unicode = err: Invalid character
bytes   = err: Invalid character
