libs/braillify/tests/snapshots/coverage_extra__pi_pair_with_x.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "x∏(1,n)"
unicode = err: Invalid character
bytes   = err: Invalid character
