libs/braillify/tests/snapshots/coverage_extra__pmatrix_single.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "$\\begin{pmatrix} a \\end{pmatrix}$"
unicode = ok: "⠦⠁⠴"
bytes   = ok: [38, 1, 52]
