libs/braillify/tests/snapshots/coverage_extra__predicate_f_y.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "F(y)"
unicode = ok: "⠠⠋⠐⠣⠽⠐⠜"
bytes   = ok: [32, 11, 16, 35, 61, 16, 28]
