libs/braillify/tests/snapshots/coverage_extra__predicate_g_z1.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "G(z+1)"
unicode = ok: "⠛⠦⠵⠢⠼⠁⠴"
bytes   = ok: [27, 38, 53, 34, 60, 1, 52]
