libs/braillify/tests/snapshots/coverage_extra__predicate_p_x.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "P(x)"
unicode = ok: "⠠⠏⠐⠣⠭⠐⠜"
bytes   = ok: [32, 15, 16, 35, 45, 16, 28]
