libs/braillify/tests/snapshots/coverage_extra__predicate_t_n.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "T(n)"
unicode = ok: "⠠⠞⠐⠣⠝⠐⠜"
bytes   = ok: [32, 30, 16, 35, 29, 16, 28]
