libs/braillify/tests/snapshots/coverage_extra__prime_double.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "x''"
unicode = ok: "⠭⠄⠄"
bytes   = ok: [45, 4, 4]
