libs/braillify/tests/snapshots/coverage_extra__prime_single.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "a'"
unicode = ok: "⠁⠄"
bytes   = ok: [1, 4]
