libs/braillify/tests/snapshots/coverage_extra__proportion.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "a:b::c:d"
unicode = ok: "⠁⠰⠒⠃⠒⠒⠉⠰⠒⠙"
bytes   = ok: [1, 48, 18, 3, 18, 18, 9, 48, 18, 25]
